[ +] 增加单例用法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,5 +18,7 @@
         </activity>
 
         <activity android:name=".page.simple.SimpleActivity"/>
+        <activity android:name=".page.single.SingleActivity1"/>
+        <activity android:name=".page.single.SingleActivity2"/>
     </application>
 </manifest>
